New in v0.5.16 (2009/04/??)
---------------------------
bug #25594: wrong backup statistics
https://savannah.nongnu.org/bugs/?25594


New in v0.5.15 (2009/04/09)
---------------------------
FTP backend was failing on PureFTPd when the "-x ''"
option was removed from the second ncftpls popen, a fix
that was implemented due to bug #24741.  This fix does
the ls in one pass by extracting the last entry on the
'ls -l' listing.

If a file is unreadable due to access rights or other
non-fatal errors, put out error message and continue
rather than dying messily with a traceback.

Added tilde '~' expansion and variable expansion in the
options that require a filename.  You can now have this
"--archive-dir=~/ArchDir/$SYSNAME" if you need it.  No
expansion is applied to the source or target URL's.

Fixed problem I caused, again, where sys.exit() was
trapping instead of exiting.  Added big note to not
to do that again.


New in v0.5.14 (2009/04/02)
---------------------------
After email voting among known duplicity contributors,
the decision was reached to revert to the GPL Version 2
license, so with their consensus, duplicity is now under
GPL Version 2.

Revert to calling NcFTP utilities (ls, get, put) directly
rather than scripting ncftp via pexpect by reverting to the
0.5.07 version of ftpbackend.py.

Changed fatal error regarding version 3.2.0 of ncftpput to
warning level since it has been reported that the problem
does not occur on most distributions.

Changed from log.Log with numbered log levels to log.Debug,
log.Info, log.Notice, log.Warn, log.FatalError as below:
    0    log.FatalError
    1-2  log.Warn
    3-4  log.Notice
    5-8  log.Info
    9 log.Debug
The -vN option has not changed.  Verbosity may also be one
of: character [ewnid], or word ['error', 'warning', 'notice',
'info', 'debug'].  The default is 4 (Notice).  The options
-v4, -vn, and -vnotice are functionally equivalent, as are
the mixed-case versions, -vN, -vNotice, -vNOTICE.
